--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">webpack4-es6-knockout</a>
-    </nav>
-
     <main id="app" class="container-fluid">
-        <home class="page-component-highlight"></home>
+        <navbar></navbar>
+        <home class="page-component-highlight">test</home>
     </main>
 
     <script src="vendor-bundle.js"></script>
